Aug 20 2005  devel  Fixed alerts again (parsing enable lines)
                    Restored '-s/--silent' cmd line option for server
                    Implemented --help and cross-module --help output
Aug 19 2005  devel  Fixed some header wonkiness
                    Started implementing alert framework (mostly there)
                    Added alert rate parsing from config files
                    Added --no-line-wrap for grep behavior
                    Fixed alerts
                    Activated channel change network alert
Aug 18 2005  devel  Restored WPA tag dissection from stable
                    Fixed over-aggressive "new network detected"
                    Added linewrap to stdout text and fixed linewrap code
                     boundary checks, made linewrap word length relational
                    Added extended supported rates support
Aug 17 2005  devel  Started implementing server protocol generic caching to
                     eliminate the use of crummy vector converts of the entire
                     struct
                    Began enabling netracker NETWORK protocol
                    Finished netracker NETWORK protocol rewrite
                    Finished netracker CLIENT protocol rewrite
Aug 14 2005  devel  Added tun/tap virtual interface support for sharing packets
                    Added patches/ dir and linux kernel patch for tuntap
                    Fixed stupid timing inversion on channel hop
Aug 13 2005  devel  Resumed use of CHANGELOG file for newcore development as it
                     is finally on its feet enough
                    Added GPS-only packetchain data injection to gpsdclient
                    Moved startup time and current timestamp to timetracker
                    Changed global timestamp to usec precision
                    Added GPSXML dumpfile module
                    Change dumpfile superclass dumpfile name generation
                    Added Flush() to dumpfile superclass and subs